[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/cats/Cat02.gd" type="Script" id=1]
[ext_resource path="res://scenes/cats/Cat.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/cat02_head.png" type="Texture" id=5]
[ext_resource path="res://assets/cat02_hand.png" type="Texture" id=6]
[ext_resource path="res://assets/cat02_body.png" type="Texture" id=7]
[ext_resource path="res://assets/cat02_tail.png" type="Texture" id=8]
[ext_resource path="res://assets/radial.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 200.0

[node name="Cat" instance=ExtResource( 2 )]
script = ExtResource( 1 )
cat_name = "Cat2"
damage = 8
aggro_range = 350.0
shot_speed = 250

[node name="AggroShape" parent="AggroRange" index="0"]
shape = SubResource( 1 )

[node name="SpawnPosition" parent="Turret" index="0"]
scale = Vector2( 0.8, 0.8 )

[node name="BulletSprite" parent="Turret/SpawnPosition" index="0"]
modulate = Color( 1, 1, 1, 1 )
self_modulate = Color( 0.784314, 0.160784, 0.913725, 0.588235 )

[node name="BulletGlowSprite" type="Sprite" parent="Turret/SpawnPosition/BulletSprite" index="0"]
modulate = Color( 0.984314, 0.596078, 0.976471, 1 )
show_behind_parent = true
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="tail" parent="Turret" index="1"]
texture = ExtResource( 8 )

[node name="cat_body" parent="Turret" index="2"]
texture = ExtResource( 7 )

[node name="hand_l" parent="Turret/cat_body" index="0"]
texture = ExtResource( 6 )

[node name="hand_r" parent="Turret/cat_body" index="1"]
texture = ExtResource( 6 )

[node name="head" parent="Turret" index="3"]
texture = ExtResource( 5 )

[node name="Cooldown" parent="." index="3"]
wait_time = 2.1
